--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charSet="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Personal Shape - Creative Designer</title>
-  <link href="templatemo-personal-style.css" rel="stylesheet" />
+  <link href="App.css" rel="stylesheet" />
  
   <nav id="navbar">
     <div className="nav-container">
